feat(auth): 完善JwtFilter的，添加接口的权限认证